perf: batch chunk embedding, virtual threads for async ingestion, shared FloatConversions utility